@@ -35,6 +35,7 @@ Changelog
  * Fix: Don't show page type on page chooser button when multiple types are allowed (Thijs Kramer)
  * Fix: Make sure page chooser search results correspond to the latest search by canceling previous requests (Esper Kuijs)
  * Fix: Inform user when moving a page from one parent to another where there is an already existing page with the same slug (Casper Timmers)
+ * Fix: User add/edit forms now support form widgets with JS/CSS media (Damian Grinwis)
 
 
 2.4 (19.12.2018)
